--- a/samples/WinDesktop/ArcGISRuntime.Toolkit.Samples/Legend/LegendsInTreeViewSample.xaml
+++ b/samples/WinDesktop/ArcGISRuntime.Toolkit.Samples/Legend/LegendsInTreeViewSample.xaml
@@ -9,69 +9,214 @@
 	xmlns:toolkitPrimitives="using:Esri.ArcGISRuntime.Toolkit.Controls.Primitives"
 	xmlns:local="clr-namespace:ArcGISRuntime.Toolkit.Samples.Desktop.Legend">
 
-	<UserControl.Resources>
-		<local:EnumeratorConverter x:Key="enumerator" />
+    <UserControl.Resources>
+        <local:EnumeratorConverter x:Key="enumerator" />
+        <BooleanToVisibilityConverter x:Key="BoolToVis"/>
 
-		<HierarchicalDataTemplate 
-			DataType="{x:Type esri:Layer}" 
-            ItemsSource="{Binding Path=ChildLayers}">
-			<Expander>
-				<Expander.Header>
-					<CheckBox IsChecked="{Binding IsVisible}" >
-						<TextBlock Text="{Binding DisplayName}" FontWeight="Bold" MaxWidth="250" 
-								   TextTrimming="CharacterEllipsis" >
-							<TextBlock.Style>
-								<Style TargetType="TextBlock">
-									<Setter Property="TextBlock.Foreground" Value="Red" />
-									<Style.Triggers>
-										<DataTrigger Binding="{Binding InitializationException}" Value="{x:Null}">
-											<Setter Property="TextBlock.Foreground" Value="Black" />
-										</DataTrigger>
-									</Style.Triggers>
-								</Style>
-							</TextBlock.Style>
-						</TextBlock>
-					</CheckBox>
-				</Expander.Header>
-				<StackPanel Margin="20,5,0,0">
-					<StackPanel Orientation="Horizontal">
-						<TextBlock Text="Opacity : "/>
-						<Slider Value="{Binding Opacity, Mode=TwoWay}" 
-							Maximum="1" Width="100" HorizontalAlignment="Left"/>
-					</StackPanel>
-					<esri:Legend Layers="{Binding Converter={StaticResource enumerator}}" 
-							ShowOnlyVisibleLayers="False" />
-				</StackPanel>
-			</Expander>
-		</HierarchicalDataTemplate>
-	</UserControl.Resources>
-	
-	<Grid>
-		<esri:MapView x:Name="MyMapView" LayerLoaded="MyMapView_OnLayerLoaded">
-			<esri:Map>
-				<esri:ArcGISTiledMapServiceLayer DisplayName="Street Map" 
-					ServiceUri="http://services.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer" 
-					ShowLegend="False" />
-				<esri:ArcGISDynamicMapServiceLayer DisplayName="Water Network"
-					ServiceUri="http://sampleserver6.arcgisonline.com/arcgis/rest/services/Water_Network/MapServer" />
-				<esri:FeatureLayer DisplayName="Damage to Residential Buildings ">
-					<esri:FeatureLayer.FeatureTable>
-						<esri:ServiceFeatureTable 
-							ServiceUri="http://sampleserver6.arcgisonline.com/arcgis/rest/services/DamageAssessment/FeatureServer/0" 
-							UseAdvancedSymbology="False" />
-					</esri:FeatureLayer.FeatureTable>
-				</esri:FeatureLayer>
-			</esri:Map>
-		</esri:MapView>
+        <!-- Custom Expander Style -->
+        <!-- ToggleButton for Expander -->
+        <ControlTemplate x:Key="SimpleExpanderButtonTemp" 
+             TargetType="{x:Type ToggleButton}">
+            <Border x:Name="ExpanderButtonBorder"
+            Background="{TemplateBinding Background}"
+            BorderBrush="{TemplateBinding BorderBrush}"
+            BorderThickness="{TemplateBinding BorderThickness}"
+            Padding="{TemplateBinding Padding}">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Rectangle Fill="Transparent"
+                       Grid.ColumnSpan="2"/>
+                    <Ellipse Name="Circle"
+                 Grid.Column="0"
+                 Stroke="Transparent"
+                 Width="20"
+                 Height="20"
+                 HorizontalAlignment="Center"
+                 VerticalAlignment="Center"
+                 />
+                    <Polygon x:Name="Triangle"
+              Grid.Column="0"
+              Points="5,0 10,10, 0,10"
+              Stroke="#FF666666"
+              Fill="#FF666666"
+              HorizontalAlignment="Center"
+              VerticalAlignment="Center"
+              RenderTransformOrigin="0.5,0.5"
+              >
+                        <Polygon.RenderTransform>
+                            <RotateTransform Angle="0"/>
+                        </Polygon.RenderTransform>
+                    </Polygon>
+                    <ContentPresenter x:Name="HeaderContent"
+                          Grid.Column="1"
+                          Margin="4,0,0,0"
+                          ContentSource="Content"/>
+                </Grid>
+            </Border>
+            <ControlTemplate.Triggers>
+                <!--Reverse the triangle when checked-->
+                <Trigger Property="IsChecked"
+                 Value="True">
+                    <Setter Property="Points" 
+               TargetName="Triangle" Value="0,0 5,10, 10,0"/>
+                </Trigger>
 
-		<Border Background="White" BorderBrush="Black" BorderThickness="1" Margin="30" Padding="10,20,20,20"
-                HorizontalAlignment="Right" VerticalAlignment="Top">
-			<Border.Effect>
-				<DropShadowEffect />
-			</Border.Effect>
-			<TreeView ItemsSource="{Binding Map.Layers, ElementName=MyMapView}"
-					  HorizontalAlignment="Left" BorderBrush="Transparent"
-					  Width="300" HorizontalContentAlignment="Stretch"/>
-		</Border>
-	</Grid>
+                <!-- MouseOver, Pressed behaviors-->
+                <Trigger Property="IsMouseOver"
+                         Value="true">
+                    <Setter Property="Stroke"
+                            Value="#FF3C7FB1"
+                            TargetName="Circle"/>
+                    <Setter Property="Stroke"
+                            Value="#222"
+                            TargetName="Triangle"/>
+                </Trigger>
+                <Trigger Property="IsPressed"
+                         Value="true">
+                    <Setter Property="Stroke"
+                            Value="#FF526C7B"
+                            TargetName="Circle"/>
+                    <Setter Property="StrokeThickness"
+                            Value="1.5"
+                            TargetName="Circle"/>
+                    <Setter Property="Stroke"
+                            Value="#FF003366"
+                            TargetName="Triangle"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+        <!-- Expander -->
+        <!-- Simple Expander Template-->
+        <ControlTemplate x:Key="SimpleExpanderTemp" TargetType="{x:Type Expander}">
+            <DockPanel>
+                <ToggleButton x:Name="ExpanderButton"
+                      DockPanel.Dock="Top"
+                      Template="{StaticResource SimpleExpanderButtonTemp}"
+                      Content="{TemplateBinding Header}"
+                      IsChecked="{Binding Path=IsExpanded, 
+                      RelativeSource={RelativeSource TemplatedParent}}"
+                      OverridesDefaultStyle="True"
+                      Padding="1.5,0">
+                </ToggleButton>
+                <ContentPresenter x:Name="ExpanderContent"
+                          Visibility="Collapsed"
+                          DockPanel.Dock="Bottom"/>
+            </DockPanel>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsExpanded" Value="True">
+                    <Setter TargetName="ExpanderContent" 
+              Property="Visibility" Value="Visible"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+        <!-- Expander Template -->
+        <HierarchicalDataTemplate DataType="{x:Type esri:Layer}" 
+                                      ItemsSource="{Binding Path=MyMapView}" >
+            <Expander Template="{StaticResource SimpleExpanderTemp}" OverridesDefaultStyle="True">
+                <Expander.Header>
+                    <StackPanel Orientation="Horizontal">
+                        <CheckBox IsChecked="{Binding IsVisible}" >
+                            <TextBlock Text="{Binding DisplayName}" FontWeight="Bold" MaxWidth="250" />
+                        </CheckBox>
+                        <Slider Value="{Binding Opacity, Mode=TwoWay}" Maximum="1" Width="80" HorizontalAlignment="Left"/>
+                    </StackPanel>
+                </Expander.Header>
+
+                <StackPanel Margin="0,0,0,0">
+                    <esri:Legend Layers="{Binding Converter={StaticResource enumerator}}"  ShowOnlyVisibleLayers="False" Margin="25" >
+                        <esri:Legend.MapLayerTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <CheckBox Content="{Binding Label}" 
+                                                        IsChecked="{Binding IsEnabled, Mode=TwoWay}"
+            						                    IsEnabled="{Binding IsInScaleRange}" 
+                                                        FontFamily="Verdana" />
+                                    <Slider Maximum="1" Value="{Binding Layer.Opacity, Mode=TwoWay}" Width="50" />
+                                </StackPanel>
+                            </DataTemplate>
+                        </esri:Legend.MapLayerTemplate>
+
+                        <esri:Legend.LayerTemplate>
+                            <DataTemplate>
+                                <Expander x:Name="LayerExpander" 
+                                          Template="{StaticResource SimpleExpanderTemp}" OverridesDefaultStyle="True"
+                                          Expanded="LayerExpander_Toggled" Collapsed="LayerExpander_Toggled">
+                                    <Expander.Header >
+                                        <StackPanel Orientation="Horizontal" Visibility="Visible">
+                                            <CheckBox Content="{Binding Label}" 
+                                                    FontFamily="Verdana" 
+                                                      IsChecked="{Binding IsVisible}"
+                                                    IsEnabled="{Binding IsInScaleRange}" 
+                                                      Checked="CheckBox_CheckedChanged" Unchecked="CheckBox_CheckedChanged" />
+                                        </StackPanel>
+                                    </Expander.Header>
+                                </Expander>
+                            </DataTemplate>
+                        </esri:Legend.LayerTemplate>
+
+                        <esri:Legend.LegendItemTemplate>
+                            <DataTemplate>
+                                <Button Background="Transparent" BorderBrush="Transparent"
+                                        Visibility="Collapsed"
+                                    Tag="{Binding Label}">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition/>
+                                            <ColumnDefinition/>
+                                        </Grid.ColumnDefinitions>
+                                        <!--Source="http://www.jinfonet.com/kbase/designer9/userguide/asset/images/button/btn_+.gif" -->
+                                        <Image Grid.Column="0" 
+                                               Source="{Binding ImageSource}" 
+                                               HorizontalAlignment="Center" VerticalAlignment="Center"
+							                   Stretch="None" MaxHeight="55" MaxWidth="55" MinWidth="20" />
+                                        <TextBlock Grid.Column="1" Text="{Binding Label}" 
+                                                   Margin="10,0" Width="150"
+                                                   VerticalAlignment="Center" HorizontalAlignment="Left" 
+                                                   TextWrapping="Wrap" 
+                                                   FontSize="8" FontFamily="Verdana" />
+                                    </Grid>
+                                </Button>
+                            </DataTemplate>
+                        </esri:Legend.LegendItemTemplate>
+                    </esri:Legend>
+
+                </StackPanel>
+            </Expander>
+        </HierarchicalDataTemplate>
+    </UserControl.Resources>
+
+    <Grid x:Name="TopTabGrid" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="Auto" >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Column="0" Height="650">
+            <esri:MapView x:Name="MyMapView" LayerLoaded="MyMapView_OnLayerLoaded">
+                <esri:Map>
+                    <esri:ArcGISTiledMapServiceLayer   DisplayName="Base Layers" ServiceUri="http://services.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer" ShowLegend="False" />
+                    <esri:ArcGISDynamicMapServiceLayer DisplayName="Contaminated Areas" ServiceUri="https://luic.bnl.gov/ArcGIS/rest/services/LUIC/Contaminated_Areas_or_Facilites/MapServer" />
+                </esri:Map>
+            </esri:MapView>
+
+            <Grid>
+                <Border Background="White" BorderBrush="Black" BorderThickness="1" Margin="30" Padding="10,20,20,20" HorizontalAlignment="Right" VerticalAlignment="Top">
+                    <Border.Effect>
+                        <DropShadowEffect />
+                    </Border.Effect>
+                    <TreeView ItemsSource="{Binding Map.Layers, ElementName=MyMapView}"
+					          HorizontalAlignment="Left" 
+                              BorderBrush="Transparent"
+					          Width="300" 
+                              HorizontalContentAlignment="Stretch">
+                    </TreeView>
+                </Border>
+            </Grid>
+
+        </Grid>
+    </Grid>
 </UserControl>
